--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   "scripts": {
     "checkPushed": "[ \"$(git rev-list --count @{upstream}..HEAD)\" -eq 0 ] || (echo You have unpushed commits && exit 1)",
     "prepublishOnly": "npm run checkPushed && npm test && npm run build",
-    "check-formatting": "./node_modules/.bin/prettier '**/*.ts' --list-different",
-    "fix-formatting": "./node_modules/.bin/prettier '**/*.ts' --write",
+    "check-formatting": "prettier '**/*.ts' --list-different",
+    "fix-formatting": "prettier '**/*.ts' --write",
     "lint": "npm run tslint && npm run check-formatting",
-    "tslint": "tslint 'src/**/*.ts' --type-check --project tsconfig.json --format verbose",
+    "tslint": "tslint 'src/**/*.ts' --project tsconfig.json --format verbose",
     "test-integration": "ava --config ava.config.integration.cjs",
     "test-unit": "ava --config ava.config.unit.cjs",
     "test": "npm run test-unit && npm run lint && npm run test-integration",
