--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "node": ">10.17.0"
   },
   "scripts": {
-    "checkPushed": "[ \"$(git rev-list --count @{upstream}..HEAD)\" -eq 0 ] || (echo You have unpushed commits && exit 1)",
-    "prepublishOnly": "npm run checkPushed && npm test && npm run build",
+    "prepublishOnly": "npm test && npm run build",
     "check-formatting": "prettier '**/*.ts' --list-different",
     "fix-formatting": "prettier '**/*.ts' --write",
     "lint": "npm run tslint && npm run check-formatting",
