--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/nektarai/postgres-migrations.git"
+    "url": "git@github.com:nektarai/postgres-migrations.git"
   },
   "bugs": {
     "url": "https://github.com/nektarai/postgres-migrations/issues"
