--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,7 +31,7 @@ jobs:
       - run: npm ci
       - run: docker pull postgres:13.2
       - env:
-          NPM_GITHUB_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
+          NPM_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # NPM_GITHUB_TOKEN should have access to: write-package
           echo "//npm.pkg.github.com/:_authToken=$NPM_GITHUB_TOKEN" >> ./.npmrc
