scoped publish public

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,4 +32,4 @@ jobs:
       - run: docker pull postgres:13.2
       - env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
+        run: npm publish --access public
