--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,31 +1,23 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Publish package
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    tags:
+      - "v*"
 
 env:
   cache-name: postgres-migrations
 
 jobs:
-  build:
+  test-and-publish:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Nodejs
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14.x
+          registry-url: "https://registry.npmjs.org"
       - name: Cache node modules
         uses: actions/cache@v2
         env:
@@ -39,4 +31,6 @@ jobs:
             ${{ runner.os }}-
       - run: npm ci
       - run: docker pull postgres:13.2
-      - run: npm test
+      - env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
