--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "postgres-migrations",
-  "version": "5.3.0",
+  "name": "@nektarai/postgres-migrations",
+  "version": "5.3.1",
   "description": "Stack Overflow style database migrations for PostgreSQL",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
     "pg-validate-migrations": "./dist/bin/validate.js"
   },
-  "author": "Thom Wright",
+  "author": "Nektar AI<developers@nektar.ai>",
   "keywords": [
     "postgres",
     "postgresql",
@@ -17,25 +17,24 @@
     "database",
     "db"
   ],
-  "homepage": "https://github.com/thomwright/postgres-migrations#readme",
+  "homepage": "https://github.com/nektarai/postgres-migrations#readme",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:thomwright/postgres-migrations.git"
+    "url": "git@github.com:nektarai/postgres-migrations.git"
   },
   "bugs": {
-    "url": "https://github.com/thomwright/postgres-migrations/issues"
+    "url": "https://github.com/nektarai/postgres-migrations/issues"
   },
   "engines": {
     "node": ">10.17.0"
   },
   "scripts": {
-    "checkPushed": "[ \"$(git rev-list --count @{upstream}..HEAD)\" -eq 0 ] || (echo You have unpushed commits && exit 1)",
-    "prepublishOnly": "npm run checkPushed && npm test && npm run build",
-    "check-formatting": "./node_modules/.bin/prettier '**/*.ts' --list-different",
-    "fix-formatting": "./node_modules/.bin/prettier '**/*.ts' --write",
+    "prepublishOnly": "npm test && npm run build",
+    "check-formatting": "prettier '**/*.ts' --list-different",
+    "fix-formatting": "prettier '**/*.ts' --write",
     "lint": "npm run tslint && npm run check-formatting",
-    "tslint": "tslint 'src/**/*.ts' --type-check --project tsconfig.json --format verbose",
+    "tslint": "tslint 'src/**/*.ts' --project tsconfig.json --format verbose",
     "test-integration": "ava --config ava.config.integration.cjs",
     "test-unit": "ava --config ava.config.unit.cjs",
     "test": "npm run test-unit && npm run lint && npm run test-integration",
